make website responsive

--- a/Tribute Page.html
+++ b/Tribute Page.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
   <body>
     <header>
