make code clean

--- a/Tribute Page.html
+++ b/Tribute Page.html
@@ -11,11 +11,12 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
   <body>
+    <main>
     <header>
-      <div class="painter">
-        <img src="https://www.vincentvangogh.org/images/paintings/self-portrait.jpg" alt="Painting of Van Gogh" id="img1" />
+      <div class="img-div">
+        <img src="https://www.vincentvangogh.org/images/paintings/self-portrait.jpg" alt="Painting of Van Gogh" id="image" />
       </div>
-      <div class="descriptionpainter">
+      <div class="header-text">
         <h1>Vicent Van Gogh</h1>
         <h2>One of the greatest Post-Impressionists painters</h2>
         <blockquote>
@@ -29,8 +30,7 @@
     </div>
     </header>
     <br />
-    <main>
-      <article>
+      <section id="tribute-info">
         <h3>Here's a timeline of Van Gogh's life:</h3>
         <ul>
           <li>
@@ -97,7 +97,7 @@
             at Auvers-sur-Oise
           </li>
         </ul>
-      </article>
+      </section>
       <aside>
         <p>
           If you have time, you shoud read more about his life on his<a
