--- a/Tribute Page.html
+++ b/Tribute Page.html
@@ -12,24 +12,29 @@
   </head>
   <body>
     <main>
-    <header>
-      <div class="img-div">
-        <img src="https://www.vincentvangogh.org/images/paintings/self-portrait.jpg" alt="Painting of Van Gogh" id="image" />
-      </div>
-      <div class="header-text">
-        <h1>Vicent Van Gogh</h1>
-        <h2>One of the greatest Post-Impressionists painters</h2>
-        <blockquote>
-          <p>
-            “I want to touch people with my art. I want them to say 'he feels
-            deeply, he feels tenderly'.”
-            <br />
-            <cite> ― Vincent Willem van Gogh</cite>
-          </p>
-        </blockquote>
-    </div>
-    </header>
-    <br />
+      <header>
+        <div class="img-div">
+          <img
+            src="https://www.vincentvangogh.org/images/paintings/self-portrait.jpg"
+            alt="Painting of Van Gogh"
+            id="image"
+          />
+        </div>
+        <br />
+        <div class="header-text">
+          <h1>Vicent Van Gogh</h1>
+          <h2>One of the greatest Post-Impressionists painters</h2>
+          <blockquote>
+            <p>
+              “I want to touch people with my art. I want them to say 'he feels
+              deeply, he feels tenderly'.”
+              <br />
+              <cite> ― Vincent Willem van Gogh</cite>
+            </p>
+          </blockquote>
+        </div>
+      </header>
+      <br />
       <section id="tribute-info">
         <h3>Here's a timeline of Van Gogh's life:</h3>
         <ul>
@@ -92,9 +97,9 @@
           <li>
             <span id="makebold">1890 </span> - In February, he painted Almond
             Blossom. In May, Van Gogh left Saint Rémy, contacted his brother
-            Theo and leaved the asylum to begin care in Auvers-sur-Oise. In July,
-            Vincent Van Gogh shot himself in the chest. He was buried on July 30
-            at Auvers-sur-Oise
+            Theo and leaved the asylum to begin care in Auvers-sur-Oise. In
+            July, Vincent Van Gogh shot himself in the chest. He was buried on
+            July 30 at Auvers-sur-Oise
           </li>
         </ul>
       </section>
@@ -109,27 +114,41 @@
       </aside>
       <br />
       <div class="images">
-        <div class="titleContainer"> 
+        <div class="titleContainer">
           <h3>Famous Paintings</h3>
         </div>
         <div class="paintings">
           <figure>
-            <img src="https://www.vincentvangogh.org/images/amazingcarousel/the-yellow-house.jpg" alt="" />
+            <img
+              src="https://www.vincentvangogh.org/images/amazingcarousel/the-yellow-house.jpg"
+              alt=""
+            />
             <figcaption>The Yellow House</figcaption>
           </figure>
 
           <figure>
-            <img src="https://www.vincentvangogh.org/images/amazingcarousel/the-starry-night.jpg" alt="Painting of The Starry Nigh" />
+            <img
+              src="https://www.vincentvangogh.org/images/amazingcarousel/the-starry-night.jpg"
+              alt="Painting of The Starry Nigh"
+            />
             <figcaption>The Starry Night</figcaption>
           </figure>
           <figure>
-            <img src="https://www.vincentvangogh.org/images/amazingcarousel/cafe-terrace-at-night.jpg" alt="Painting of Café Terrace at Night" />
+            <img
+              src="https://www.vincentvangogh.org/images/amazingcarousel/cafe-terrace-at-night.jpg"
+              alt="Painting of Café Terrace at Night"
+            />
             <figcaption>Café Terrace at Night</figcaption>
           </figure>
         </div>
-          <div class="seemore">
-            <a href="https://www.vincentvangogh.org/van-gogh-paintings.jsp#" target="_blank"> Click here to see more paintings</a>
-          </div>
+        <div class="seemore">
+          <a
+            href="https://www.vincentvangogh.org/van-gogh-paintings.jsp#"
+            target="_blank"
+          >
+            Click here to see more paintings</a
+          >
+        </div>
       </div>
     </main>
     <br />
