--- a/TributePage/index.html
+++ b/TributePage/index.html
@@ -11,91 +11,90 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
   <body>
-    <main>
-      <header>
-        <div class="img-div">
-          <img
-            src="https://www.vincentvangogh.org/images/paintings/self-portrait.jpg"
-            alt="Painting of Van Gogh"
-            id="image"
-          />
-        </div>
-        <br />
-        <div class="header-text">
-          <h1>Vicent Van Gogh</h1>
-          <h2>One of the greatest Post-Impressionists painters</h2>
-          <blockquote>
-            <p>
-              “I want to touch people with my art. I want them to say 'he feels
-              deeply, he feels tenderly'.”
-              <br />
-              <cite> ― Vincent Willem van Gogh</cite>
-            </p>
-          </blockquote>
-        </div>
-      </header>
-      <br />
+    <header>
+      <figure id="img-div">
+        <img
+          src="https://www.vincentvangogh.org/images/paintings/self-portrait.jpg"
+          alt="Painting of Van Gogh"
+          id="image"
+        />
+        <figcaption id="img-caption">Self Portrait of Van Gogh</figcaption>
+      </figure>
+      <div class="header-text">
+        <h1 id="title">Vicent Van Gogh</h1>
+        <h2>One of the greatest Post-Impressionists painters</h2>
+        <blockquote>
+          <p>
+            “I want to touch people with my art. I want them to say 'he feels
+            deeply, he feels tenderly'.”
+          </p>
+          <cite> ― Vincent Willem van Gogh</cite>
+        </blockquote>
+      </div>
+    </header>
+    <main id="main">
       <section id="tribute-info">
         <h3>Here's a timeline of Van Gogh's life:</h3>
         <ul>
           <li>
-            <span id="makebold">1853 </span> - On 30 March, Vincent Willem van
-            Gogh was born in Groot-Zundert, Netherlands. He was the eldest son
-            of the Protestant clergyman Theodorus van Gogh and Anna Cornelia
+            <span class="makebold">1853 </span> - On 30 March, Vincent Willem
+            van Gogh was born in Groot-Zundert, Netherlands. He was the eldest
+            son of the Protestant clergyman Theodorus van Gogh and Anna Cornelia
             Carbentus
           </li>
           <li>
-            <span id="makebold">1864</span> - He was sent to boarding school in
-            Zevenbergen
+            <span class="makebold">1864</span> - He was sent to boarding school
+            in Zevenbergen
           </li>
           <li>
-            <span id="makebold">1869</span>- Van Gogh is employed by the
+            <span class="makebold">1869</span>- Van Gogh is employed by the
             international art dealer Goupil & Co. in the Hague gallery
           </li>
           <li>
-            <span id="makebold"> 1873 </span> - Van Gogh was transferred to the
-            company branch in London. This was a happy period for Van Gogh: he
-            was having success at work and at twenty years of age he earned more
-            than his father.
+            <span class="makebold"> 1873 </span> - Van Gogh was transferred to
+            the company branch in London. This was a happy period for Van Gogh:
+            he was having success at work and at twenty years of age he earned
+            more than his father.
           </li>
           <li>
-            <span id="makebold">1875</span> - Against his will, he was posted
+            <span class="makebold">1875</span> - Against his will, he was posted
             permanendy to Paris. His aversion to the art trade grew steadily and
             a year later he quit the company
           </li>
           <li>
-            <span id="makebold">1876 </span>- Van Gogh devoted his life to the
-            evangelization of the poor in the town of Borinage, Belgium
+            <span class="makebold">1876 </span>- Van Gogh devoted his life to
+            the evangelization of the poor in the town of Borinage, Belgium
           </li>
           <li>
-            <span id="makebold">1880 </span> - Van Gogh moved to Brussels and
+            <span class="makebold">1880 </span> - Van Gogh moved to Brussels and
             began to learn the skills needed to become an artist
           </li>
           <li>
-            <span id="makebold">1885</span> - Completion of The Potato Eaters
+            <span class="makebold">1885</span> - Completion of The Potato Eaters
           </li>
           <li>
-            <span id="makebold"> 1886 </span> - Van Gogh moved to Paris.
+            <span class="makebold"> 1886 </span> - Van Gogh moved to Paris.
             Discovered Impressionists and Post Impressionists
           </li>
           <li>
-            <span id="makebold">1887</span> - Completion of Self Portrait with
-            Straw Hat
+            <span class="makebold">1887</span> - Completion of Self Portrait
+            with Straw Hat
           </li>
           <li>
-            <span id="makebold"> 1888 </span>- Van Gogh moved to Arles to create
-            a school of art. There he painted the famous sunflower pieces and
-            began to suffer from mental problems. In September, he painted
+            <span class="makebold"> 1888 </span>- Van Gogh moved to Arles to
+            create a school of art. There he painted the famous sunflower pieces
+            and began to suffer from mental problems. In September, he painted
             Starry Night Over the Rhone and The Café Terrace on the Place du
             Forum, Arles, at Night. In October he painted Vincent's Bedroom in
             Arles and in December, Van Gogh cut off a portion of his ear and
             commited himself to a mental asylum in Saint Rémy
           </li>
           <li>
-            <span id="makebold">1889</span> - He painted Irises and Starry Night
+            <span class="makebold">1889</span> - He painted Irises and Starry
+            Night
           </li>
           <li>
-            <span id="makebold">1890 </span> - In February, he painted Almond
+            <span class="makebold">1890 </span> - In February, he painted Almond
             Blossom. In May, Van Gogh left Saint Rémy, contacted his brother
             Theo and leaved the asylum to begin care in Auvers-sur-Oise. In
             July, Vincent Van Gogh shot himself in the chest. He was buried on
@@ -103,25 +102,26 @@
           </li>
         </ul>
       </section>
-      <aside>
+      <div id="readmore">
         <p>
-          If you have time, you shoud read more about his life on his<a
+          If you have time, you shoud read more about his life on his
+          <a
             href="https://en.wikipedia.org/wiki/Vincent_van_Gogh"
             target="_blank"
+            id="tribute-link"
             >Wikipedia entry</a
           >.
         </p>
-      </aside>
-      <br />
-      <div class="images">
-        <div class="titleContainer">
+      </div>
+      <div class="paintings-container">
+        <div class="title-container">
           <h3>Famous Paintings</h3>
         </div>
-        <div class="paintings">
+        <div class="images-container">
           <figure>
             <img
               src="https://www.vincentvangogh.org/images/amazingcarousel/the-yellow-house.jpg"
-              alt=""
+              alt="painting of a yellow house"
             />
             <figcaption>The Yellow House</figcaption>
           </figure>
@@ -141,7 +141,7 @@
             <figcaption>Café Terrace at Night</figcaption>
           </figure>
         </div>
-        <div class="seemore">
+        <div id="seemore">
           <a
             href="https://www.vincentvangogh.org/van-gogh-paintings.jsp#"
             target="_blank"
@@ -151,7 +151,6 @@
         </div>
       </div>
     </main>
-    <br />
     <footer>
       <p>
         Written and coded by
